--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/react": "^19.0.2",
         "axios": "^1.7.9",
         "next": "^15.1.3",
+        "sass": "^1.83.1",
         "typescript": "^5.7.2"
     },
     "scripts": {
