--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@types/node": "^22.10.3",
         "@types/react": "^19.0.2",
         "axios": "^1.7.9",
         "next": "^15.1.3",
+        "react-responsive-carousel": "^3.2.23",
         "sass": "^1.83.1",
         "typescript": "^5.7.2"
     },
