--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@types/node": "^22.10.3",
         "@types/react": "^19.0.2",
         "axios": "^1.7.9",
+        "jsonwebtoken": "^9.0.2",
         "next": "^15.1.3",
         "react-responsive-carousel": "^3.2.23",
         "sass": "^1.83.1",
@@ -36,5 +37,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/jsonwebtoken": "^9.0.8"
     }
 }
